# tapu

./: .gitignore  CLAUDE.md  README.md  leagues.toml  pyproject.toml  scratch_color.py
docs/superpowers/plans/: 2026-04-27-league-tournament-tabs.md  2026-04-30-performance-fixes.md  2026-04-30-ux-round1.md  2026-05-01-ux-round2-navigation.md  2026-05-01-ux-round3.md
docs/superpowers/specs/: 2026-04-26-league-tournaments-tabs-design.md  2026-04-30-performance-fixes-design.md  2026-04-30-ux-round1-design.md  2026-05-01-ux-round2-design.md  2026-05-01-ux-round3-design.md
src/tapu/: app.py  cli.py  config.py
src/tapu/api/: __init__.py  client.py
src/tapu/screens/: __init__.py  chat.py  dashboard.py  help.py  league.py  league_palette.py  match.py  matchday.py  wc_group.py
src/tapu/widgets/: __init__.py  bracket.py  league_card.py  match_card.py  match_detail.py  standings.py  team_logo.py  wc_groups.py
tests/: conftest.py  test_bracket.py  test_client.py  test_config.py  test_league.py  test_palette.py  test_standings.py  test_widgets.py
