[project]
name = "tapu"
version = "0.1.0"
description = "⚽ fútbol en tu terminal — soccer stats TUI"
authors = [{ name = "Gregory Gomez", email = "gregomexl@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual>=3.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
tapu = "tapu.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF", "S", "SIM", "TRY"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
